; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/tegra/extr_xusb-tegra210.c_tegra210_hsic_phy_power_off.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/tegra/extr_xusb-tegra210.c_tegra210_hsic_phy_power_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy = type { i32 }
%struct.tegra_xusb_lane = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.tegra_xusb_padctl* }
%struct.tegra_xusb_padctl = type { i32 }
%struct.tegra_xusb_hsic_pad = type { i32 }

@XUSB_PADCTL_HSIC_PAD_CTL0_PD_RX_DATA0 = common dso_local global i32 0, align 4
@XUSB_PADCTL_HSIC_PAD_CTL0_PD_RX_DATA1 = common dso_local global i32 0, align 4
@XUSB_PADCTL_HSIC_PAD_CTL0_PD_RX_STROBE = common dso_local global i32 0, align 4
@XUSB_PADCTL_HSIC_PAD_CTL0_PD_ZI_DATA0 = common dso_local global i32 0, align 4
@XUSB_PADCTL_HSIC_PAD_CTL0_PD_ZI_DATA1 = common dso_local global i32 0, align 4
@XUSB_PADCTL_HSIC_PAD_CTL0_PD_ZI_STROBE = common dso_local global i32 0, align 4
@XUSB_PADCTL_HSIC_PAD_CTL0_PD_TX_DATA0 = common dso_local global i32 0, align 4
@XUSB_PADCTL_HSIC_PAD_CTL0_PD_TX_DATA1 = common dso_local global i32 0, align 4
@XUSB_PADCTL_HSIC_PAD_CTL0_PD_TX_STROBE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.phy*)* @tegra210_hsic_phy_power_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tegra210_hsic_phy_power_off(%struct.phy* %0) #0 {
  %2 = alloca %struct.phy*, align 8
  %3 = alloca %struct.tegra_xusb_lane*, align 8
  %4 = alloca %struct.tegra_xusb_hsic_pad*, align 8
  %5 = alloca %struct.tegra_xusb_padctl*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.phy* %0, %struct.phy** %2, align 8
  %8 = load %struct.phy*, %struct.phy** %2, align 8
  %9 = call %struct.tegra_xusb_lane* @phy_get_drvdata(%struct.phy* %8)
  store %struct.tegra_xusb_lane* %9, %struct.tegra_xusb_lane** %3, align 8
  %10 = load %struct.tegra_xusb_lane*, %struct.tegra_xusb_lane** %3, align 8
  %11 = getelementptr inbounds %struct.tegra_xusb_lane, %struct.tegra_xusb_lane* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = call %struct.tegra_xusb_hsic_pad* @to_hsic_pad(%struct.TYPE_2__* %12)
  store %struct.tegra_xusb_hsic_pad* %13, %struct.tegra_xusb_hsic_pad** %4, align 8
  %14 = load %struct.tegra_xusb_lane*, %struct.tegra_xusb_lane** %3, align 8
  %15 = getelementptr inbounds %struct.tegra_xusb_lane, %struct.tegra_xusb_lane* %14, i32 0, i32 1
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load %struct.tegra_xusb_padctl*, %struct.tegra_xusb_padctl** %17, align 8
  store %struct.tegra_xusb_padctl* %18, %struct.tegra_xusb_padctl** %5, align 8
  %19 = load %struct.tegra_xusb_lane*, %struct.tegra_xusb_lane** %3, align 8
  %20 = getelementptr inbounds %struct.tegra_xusb_lane, %struct.tegra_xusb_lane* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  store i32 %21, i32* %6, align 4
  %22 = load %struct.tegra_xusb_padctl*, %struct.tegra_xusb_padctl** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @XUSB_PADCTL_HSIC_PADX_CTL0(i32 %23)
  %25 = call i32 @padctl_readl(%struct.tegra_xusb_padctl* %22, i32 %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_RX_DATA0, align 4
  %27 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_RX_DATA1, align 4
  %28 = or i32 %26, %27
  %29 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_RX_STROBE, align 4
  %30 = or i32 %28, %29
  %31 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_ZI_DATA0, align 4
  %32 = or i32 %30, %31
  %33 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_ZI_DATA1, align 4
  %34 = or i32 %32, %33
  %35 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_ZI_STROBE, align 4
  %36 = or i32 %34, %35
  %37 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_TX_DATA0, align 4
  %38 = or i32 %36, %37
  %39 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_TX_DATA1, align 4
  %40 = or i32 %38, %39
  %41 = load i32, i32* @XUSB_PADCTL_HSIC_PAD_CTL0_PD_TX_STROBE, align 4
  %42 = or i32 %40, %41
  %43 = load i32, i32* %7, align 4
  %44 = or i32 %43, %42
  store i32 %44, i32* %7, align 4
  %45 = load %struct.tegra_xusb_padctl*, %struct.tegra_xusb_padctl** %5, align 8
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* %6, align 4
  %48 = call i32 @XUSB_PADCTL_HSIC_PADX_CTL1(i32 %47)
  %49 = call i32 @padctl_writel(%struct.tegra_xusb_padctl* %45, i32 %46, i32 %48)
  %50 = load %struct.tegra_xusb_hsic_pad*, %struct.tegra_xusb_hsic_pad** %4, align 8
  %51 = getelementptr inbounds %struct.tegra_xusb_hsic_pad, %struct.tegra_xusb_hsic_pad* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @regulator_disable(i32 %52)
  ret i32 0
}

declare dso_local %struct.tegra_xusb_lane* @phy_get_drvdata(%struct.phy*) #1

declare dso_local %struct.tegra_xusb_hsic_pad* @to_hsic_pad(%struct.TYPE_2__*) #1

declare dso_local i32 @padctl_readl(%struct.tegra_xusb_padctl*, i32) #1

declare dso_local i32 @XUSB_PADCTL_HSIC_PADX_CTL0(i32) #1

declare dso_local i32 @padctl_writel(%struct.tegra_xusb_padctl*, i32, i32) #1

declare dso_local i32 @XUSB_PADCTL_HSIC_PADX_CTL1(i32) #1

declare dso_local i32 @regulator_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
